--- a/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
+++ b/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
@@ -104,8 +104,8 @@
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W2d-ia-w7W">
                                                                         <rect key="frame" x="0.0" y="0.0" width="315" height="20"/>
                                                                         <subviews>
-                                                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hij-4C-6yi">
-                                                                                <rect key="frame" x="285" y="-2.0000000000000018" width="30" height="25"/>
+                                                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil" translatesAutoresizingMaskIntoConstraints="NO" id="hij-4C-6yi">
+                                                                                <rect key="frame" x="285" y="-5" width="30" height="30"/>
                                                                                 <color key="tintColor" name="green-90D599"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="30" id="HLT-tw-3ji"/>
@@ -1466,7 +1466,7 @@ the + button below.</string>
         <image name="fertilizer" width="50" height="61.666667938232422"/>
         <image name="garden" width="33" height="30.666666030883789"/>
         <image name="logo" width="614.33331298828125" height="759"/>
-        <image name="pencil" catalog="system" width="128" height="113"/>
+        <image name="pencil" width="33" height="33"/>
         <image name="plantasia" width="624" height="196.66667175292969"/>
         <image name="plus" width="50" height="50"/>
         <image name="settings" width="33" height="18"/>
