--- a/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
+++ b/Plantasia/Plantasia/Screens/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -581,7 +581,7 @@ the + button below.</string>
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="708"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3fK-rr-raP">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="759.66666666666663"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="834.66666666666663"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MfJ-mA-jMo">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="324.66666666666669"/>
@@ -619,7 +619,7 @@ the + button below.</string>
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="o2Q-zY-05E">
-                                                        <rect key="frame" x="30" y="364.66666666666674" width="315" height="355"/>
+                                                        <rect key="frame" x="30" y="364.66666666666674" width="315" height="430"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Hk3-fx-zIr">
                                                                 <rect key="frame" x="0.0" y="0.0" width="315" height="40"/>
@@ -667,10 +667,28 @@ the + button below.</string>
                                                                     </stackView>
                                                                 </subviews>
                                                             </stackView>
-                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="t5R-7t-C9l">
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nmp-Sd-dVS">
                                                                 <rect key="frame" x="0.0" y="80" width="315" height="35"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="descr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8r-uk-yCY">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYs-Bu-xHs">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="24"/>
+                                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                                        <color key="textColor" name="black-232323"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g7X-nl-72x">
+                                                                        <rect key="frame" x="0.0" y="34" width="315" height="1"/>
+                                                                        <color key="backgroundColor" name="grey-C4C4C4"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="1" id="Pnf-aA-HPo"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                </subviews>
+                                                            </stackView>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="t5R-7t-C9l">
+                                                                <rect key="frame" x="0.0" y="154.99999999999994" width="315" height="35"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="descr" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8r-uk-yCY">
                                                                         <rect key="frame" x="0.0" y="0.0" width="315" height="24"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                                         <color key="textColor" name="black-232323"/>
@@ -686,7 +704,7 @@ the + button below.</string>
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="woI-SB-sER">
-                                                                <rect key="frame" x="0.0" y="154.99999999999994" width="315" height="35"/>
+                                                                <rect key="frame" x="0.0" y="229.99999999999994" width="315" height="35"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2U-aC-haH">
                                                                         <rect key="frame" x="0.0" y="0.0" width="315" height="24"/>
@@ -704,7 +722,7 @@ the + button below.</string>
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XRk-X4-rie">
-                                                                <rect key="frame" x="0.0" y="229.99999999999994" width="315" height="35"/>
+                                                                <rect key="frame" x="0.0" y="304.99999999999994" width="315" height="35"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7b-3n-mmA">
                                                                         <rect key="frame" x="0.0" y="0.0" width="315" height="24"/>
@@ -722,13 +740,13 @@ the + button below.</string>
                                                                 </subviews>
                                                             </stackView>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-Hg-h6n">
-                                                                <rect key="frame" x="0.0" y="304.99999999999994" width="315" height="50"/>
+                                                                <rect key="frame" x="0.0" y="379.99999999999994" width="315" height="50"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="50" id="zt2-Ni-HHm"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                                 <color key="tintColor" name="green-90D599"/>
-                                                                <state key="normal" title="Photo Gallery">
+                                                                <state key="normal" title="Photo Album">
                                                                     <color key="titleColor" name="green-90D599"/>
                                                                 </state>
                                                                 <connections>
@@ -828,7 +846,9 @@ the + button below.</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CmR-3a-3Xa"/>
                     </view>
-                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="SMf-s7-ctb"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="SMf-s7-ctb">
+                        <nil key="title"/>
+                    </navigationItem>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="actionBarBottomConstraint" destination="0Tk-mB-kgA" id="NUz-gD-DeA"/>
@@ -844,6 +864,7 @@ the + button below.</string>
                         <outlet property="imageShadowContainerView" destination="MfJ-mA-jMo" id="UKL-7z-rmb"/>
                         <outlet property="imageTopGradientView" destination="hrL-W5-5GN" id="zqJ-bf-qBU"/>
                         <outlet property="imageView" destination="RbV-EU-wxh" id="byg-BN-RPZ"/>
+                        <outlet property="nameLabel" destination="gYs-Bu-xHs" id="lcj-bj-kMz"/>
                         <outlet property="photoGalleryButton" destination="rbA-Hg-h6n" id="fSH-ae-2AM"/>
                         <outlet property="wateringLabel" destination="d2U-aC-haH" id="SiF-d6-2Ol"/>
                         <outlet property="wateringPercentageLabel" destination="fgV-lM-9ZX" id="b3e-Kc-pbW"/>
@@ -1003,7 +1024,7 @@ the + button below.</string>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="tintColor" name="green-90D599"/>
-                                                        <state key="normal" title="Photo Gallery">
+                                                        <state key="normal" title="Photo Album">
                                                             <color key="titleColor" name="green-90D599"/>
                                                         </state>
                                                         <connections>
@@ -1212,7 +1233,7 @@ the + button below.</string>
             </objects>
             <point key="canvasLocation" x="1321.7391304347827" y="1530.8035714285713"/>
         </scene>
-        <!--Photo Gallery-->
+        <!--Photo Album-->
         <scene sceneID="q1s-jg-dlb">
             <objects>
                 <viewController id="arn-TV-51J" customClass="PhotoGalleryViewController" customModule="Plantasia" customModuleProvider="target" sceneMemberID="viewController">
@@ -1229,7 +1250,7 @@ the + button below.</string>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="hD8-0U-R3S">
                                                 <rect key="frame" x="20" y="227.66666666666666" width="335" height="114.66666666666666"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The gallery is empty" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="16w-4c-d01">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The album is empty" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="16w-4c-d01">
                                                         <rect key="frame" x="0.0" y="0.0" width="335" height="40.666666666666664"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                                                         <color key="textColor" name="black-232323"/>
@@ -1420,7 +1441,7 @@ the + button below.</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="buA-pK-TIy"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Photo Gallery" largeTitleDisplayMode="always" id="OVZ-u3-dTr">
+                    <navigationItem key="navigationItem" title="Photo Album" largeTitleDisplayMode="always" id="OVZ-u3-dTr">
                         <barButtonItem key="backBarButtonItem" title=" " id="aC8-6j-05X"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
@@ -1461,7 +1482,7 @@ the + button below.</string>
         <segue reference="Kk7-NU-83o"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="camera" width="80" height="81"/>
+        <image name="camera" width="50" height="100.33333587646484"/>
         <image name="delete" width="115" height="115"/>
         <image name="fertilizer" width="50" height="61.666667938232422"/>
         <image name="garden" width="33" height="30.666666030883789"/>
