--- a/Plantasia/iMessageExtension/Views/Base.lproj/MainInterface.storyboard
+++ b/Plantasia/iMessageExtension/Views/Base.lproj/MainInterface.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -18,7 +19,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pJS-gm-e1l">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ccn-49-evf">
+                                <rect key="frame" x="20" y="64" width="280" height="444"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GyO-74-x9O">
+                                        <rect key="frame" x="20" y="0.0" width="240" height="85"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your garden is empty" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b3q-ue-KGf">
+                                                <rect key="frame" x="2.5" y="0.0" width="235.5" height="29"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                <color key="textColor" name="black-232323"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap here to launch Plantasia and add some plants 🌿" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZK-EW-anP">
+                                                <rect key="frame" x="0.0" y="49" width="240" height="36"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <color key="textColor" name="black-232323"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="1Ky-t9-3xi" appends="YES" id="Cec-46-Q97"/>
+                                        </connections>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GyO-74-x9O" secondAttribute="trailing" constant="20" id="C9c-eg-MKi"/>
+                                    <constraint firstItem="GyO-74-x9O" firstAttribute="centerX" secondItem="Ccn-49-evf" secondAttribute="centerX" id="Dax-Xp-D8h"/>
+                                    <constraint firstItem="GyO-74-x9O" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ccn-49-evf" secondAttribute="leading" constant="20" id="rCv-4x-Ms5"/>
+                                    <constraint firstItem="GyO-74-x9O" firstAttribute="top" secondItem="Ccn-49-evf" secondAttribute="top" id="sGW-D8-c62"/>
+                                </constraints>
+                            </view>
+                            <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pJS-gm-e1l">
                                 <rect key="frame" x="20" y="64" width="280" height="444"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MQj-2F-g1L">
@@ -60,24 +93,36 @@
                         <viewLayoutGuide key="safeArea" id="LDy-ih-0nr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Ccn-49-evf" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" constant="20" id="5VS-93-oJf"/>
                             <constraint firstItem="LDy-ih-0nr" firstAttribute="trailing" secondItem="pJS-gm-e1l" secondAttribute="trailing" constant="20" id="EOH-8f-qbu"/>
                             <constraint firstItem="LDy-ih-0nr" firstAttribute="bottom" secondItem="pJS-gm-e1l" secondAttribute="bottom" constant="20" id="Prb-TO-xwi"/>
                             <constraint firstItem="pJS-gm-e1l" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" constant="20" id="abl-Qm-BkP"/>
                             <constraint firstItem="pJS-gm-e1l" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" constant="20" id="bjh-1r-pG9"/>
+                            <constraint firstAttribute="trailing" secondItem="Ccn-49-evf" secondAttribute="trailing" constant="20" id="frp-1d-eh2"/>
+                            <constraint firstAttribute="bottom" secondItem="Ccn-49-evf" secondAttribute="bottom" constant="20" id="h2A-0L-2hx"/>
+                            <constraint firstItem="Ccn-49-evf" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" constant="20" id="k2H-ha-jij"/>
                         </constraints>
                     </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="528"/>
                     <connections>
+                        <outlet property="emptyContainerView" destination="GyO-74-x9O" id="Ehf-mH-Tmb"/>
                         <outlet property="plantsCollectionView" destination="pJS-gm-e1l" id="R3u-l8-rgA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="1Ky-t9-3xi">
+                    <connections>
+                        <action selector="emptyContainerViewPressed:" destination="ObA-dk-sSI" id="0ZE-vx-Eg2"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-233" y="53"/>
+            <point key="canvasLocation" x="-233.33333333333334" y="52.901785714285715"/>
         </scene>
     </scenes>
     <resources>
+        <namedColor name="black-232323">
+            <color red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
