--- a/Plantasia/iMessageExtension/Views/Base.lproj/MainInterface.storyboard
+++ b/Plantasia/iMessageExtension/Views/Base.lproj/MainInterface.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -52,7 +52,7 @@
                                 </constraints>
                             </view>
                             <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pJS-gm-e1l">
-                                <rect key="frame" x="20" y="64" width="280" height="464"/>
+                                <rect key="frame" x="20" y="44" width="280" height="484"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MQj-2F-g1L">
                                     <size key="itemSize" width="80" height="80"/>
@@ -97,7 +97,7 @@
                             <constraint firstItem="LDy-ih-0nr" firstAttribute="trailing" secondItem="pJS-gm-e1l" secondAttribute="trailing" constant="20" id="EOH-8f-qbu"/>
                             <constraint firstAttribute="bottom" secondItem="pJS-gm-e1l" secondAttribute="bottom" id="Prb-TO-xwi"/>
                             <constraint firstItem="pJS-gm-e1l" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" constant="20" id="abl-Qm-BkP"/>
-                            <constraint firstItem="pJS-gm-e1l" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" constant="20" id="bjh-1r-pG9"/>
+                            <constraint firstItem="pJS-gm-e1l" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" id="bjh-1r-pG9"/>
                             <constraint firstAttribute="trailing" secondItem="Ccn-49-evf" secondAttribute="trailing" constant="20" id="frp-1d-eh2"/>
                             <constraint firstAttribute="bottom" secondItem="Ccn-49-evf" secondAttribute="bottom" constant="20" id="h2A-0L-2hx"/>
                             <constraint firstItem="Ccn-49-evf" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" constant="20" id="k2H-ha-jij"/>
